# my-first-project

./: .gitignore  README.md
week1/: CMakeLists.txt  main.cpp  project1.cpp  project2.cpp
week2/ros2_ws/install/: local_setup.sh  setup.sh
week2/ros2_ws/install/training_pkg/lib/training_pkg/: listener  talker
week2/ros2_ws/install/training_pkg/share/ament_index/resource_index/parent_prefix_path/: training_pkg
week2/ros2_ws/install/training_pkg/share/training_pkg/: local_setup.sh  package.sh
week2/ros2_ws/install/training_pkg/share/training_pkg/launch/: talk_and_listen.launch.py
week2/ros2_ws/log/: latest_build
week2/ros2_ws/my_bag_demo/: metadata.yaml  my_bag_demo_0.db3
week2/ros2_ws/my_first_bag/: metadata.yaml  my_first_bag_0.db3
week2/ros2_ws/src/training_pkg/: CMakeLists.txt  package.xml
week2/ros2_ws/src/training_pkg/src/: listener.cpp  talker.cpp
week3/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
week3/ros2_ws/install/armor_detect/lib/armor_detect/: color_split  diagnose  extract_frames  hsv_check  hsv_scan  step4_lightbars  step5_armor  video_player  video_processor
week3/ros2_ws/install/armor_detect/share/ament_index/resource_index/package_run_dependencies/: armor_detect
week3/ros2_ws/install/armor_detect/share/ament_index/resource_index/parent_prefix_path/: armor_detect
week3/ros2_ws/install/armor_detect/share/armor_detect/: local_setup.sh  package.ps1  package.sh
week3/ros2_ws/log/: latest_build
week3/ros2_ws/src/armor_detect/: CMakeLists.txt  package.xml
week3/ros2_ws/src/armor_detect/include/armor_detect/: armor_detector.h
week3/ros2_ws/src/armor_detect/src/: armor_detector.cpp  color_split.cpp  diagnose.cpp  extract_frames.cpp  hsv_check.cpp  hsv_scan.cpp  step4_lightbars.cpp  step5_armor.cpp  video_player.cpp  video_processor.cpp
week4/ros2_ws/src/armor_detect_ros/: CMakeLists.txt  package.xml
week4/ros2_ws/src/armor_detect_ros/config/: params.yaml
week4/ros2_ws/src/armor_detect_ros/include/armor_detect_ros/: armor_detector.h
week4/ros2_ws/src/armor_detect_ros/launch/: detect.launch.py
week4/ros2_ws/src/armor_detect_ros/src/: armor_detector.cpp  color_picker.cpp  detect_node.cpp  hik_camera_node.cpp
